io.centilliard.fipm/src/main/fabric8/fipm-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: fipm
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: fipm-app
        deploymentconfig: fipm-config
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: JAVA_OPTIONS
          value: -Dswarm.project.stage=production -Djava.net.preferIPv4Stack=true
        name: fipm-cont
        image: centilliard.io.fipm:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fipm-container
      from:
        kind: ImageStreamTag
        name: centilliard.io.fipm:latest
    type: ImageChange
