io.centilliard.fipm/src/main/fabric8/fipm-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fipm-svc
  annotations:
    description: Inventory Service based on thorntail
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: fipm-config
  type: LoadBalancer
