io.centilliard.fipm/src/main/fabric8/fipm-route.yml
apiVersion: v1
kind: Route
metadata:
  name: fipm-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fipm-route
